add option to automatically mark filtered episodes as played

--- a/app/src/main/res/layout/episode_filter_dialog.xml
+++ b/app/src/main/res/layout/episode_filter_dialog.xml
@@ -94,6 +94,12 @@
 
         </LinearLayout>
 
+        <CheckBox
+            android:id="@+id/markAsPlayedCheckBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/mark_excluded_as_played" />
+
     </LinearLayout>
 
 </ScrollView>
