--- a/core/src/main/res/values/arrays.xml
+++ b/core/src/main/res/values/arrays.xml
@@ -65,12 +65,14 @@
 
     <string-array name="feedNewEpisodesActionItems">
         <item>@string/global_default</item>
+        <item>@string/feed_new_episodes_action_add_to_queue</item>
         <item>@string/feed_new_episodes_action_add_to_inbox</item>
         <item>@string/feed_new_episodes_action_nothing</item>
     </string-array>
 
     <string-array name="feedNewEpisodesActionValues">
         <item>0</item>
+        <item>3</item>
         <item>1</item>
         <item>2</item>
     </string-array>
